# ex-g

./: .gitignore  Button.hpp  MotionSensor.cpp  MotionSensor.hpp  MouseSensor.cpp  MouseSensor.hpp  README.md  ScrollWheel.hpp  SpiTransaction.hpp  ex-g.ino  meson.build  sketch.yaml
.github/workflows/: ci.yml
subprojects/: .gitignore  catch2.wrap
tests/: meson.build  test_motion_sensor.cpp  test_mouse_sensor.cpp
tests/mocks/: Arduino.cpp  Arduino.h  SPI.h  meson.build
